turtleart.circleying.CircleYing.scala.error
Compilation error:
CircleYing:3: error: not found: value i
      Cercle(i,j)
             ^